gitops/base/pelostage.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: pelostage-ingress
  namespace: backstage
spec:
  ingressClassName: nginx
  rules:
    - host: backstage.host
      http:
        paths:
          - backend:
              service:
                name: backstage
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - backstage.host
      secretName: pelostage-secret

---
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage
      containers:
        - name: backstage
          image: ghcr.io/pelotech/pelostage:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7007
